[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/buildings/power_building.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/coal_power_plant.gd" type="Script" id=2]
[ext_resource path="res://assets/images/powerPlant.png" type="Texture" id=3]

[node name="PowerPlant" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="1"]
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="." index="2"]
margin_left = 39.0
margin_top = 17.0
margin_right = 73.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="." index="3"]
autostart = true

[connection signal="input_event" from="." to="." method="_on_PowerPlant_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_PowerPlant_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PowerPlant_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
