[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/coal_power_plant.gd" type="Script" id=1]
[ext_resource path="res://assets/images/powerPlant.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 54.4518

[sub_resource type="CircleShape2D" id=2]
radius = 54.4518

[node name="CoalPowerPlant" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 39.0
margin_top = 17.0
margin_right = 73.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerRadius" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="area_shape_entered" from="." to="." method="_on_CoalPowerPlant_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_CoalPowerPlant_area_shape_exited"]
[connection signal="body_entered" from="." to="." method="_on_CoalPowerPlant_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CoalPowerPlant_body_exited"]
[connection signal="input_event" from="." to="." method="_on_CoalPowerPlant_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_CoalPowerPlant_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CoalPowerPlant_mouse_exited"]
